--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ header li {
 
 a:link {
   text-decoration: none;
+  color: #000;
 }
 
 a:visited {
@@ -516,4 +517,16 @@ h6 {
 
 .arrow:hover {
   transition: all .2s;
+}
+
+.video-container {
+  background-color: #52796B;
+  height: 30rem;
+  width: 100%;
+}
+
+video {
+  display: block;
+  margin:auto;
+  width: 80%;
 }
