--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h1 {
   width: 70%;*/
 }
 
-.project-conatiner {
+.project-container {
   background-color: #000;
   position: relative;
   width: 100%;
@@ -144,7 +144,7 @@ h1 {
   transition: .3 ease-in-out;
   opacity: 0;
   position: absolute;
-  top: 67.5%;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -501,7 +501,7 @@ h6 {
    height: 1.6rem;
    color: #fff;
    position: absolute;
-   top: 50%;
+   top: 45%;
    margin-top: -2rem;
    cursor: pointer;
 }
