resolved errors and added comments to HTML files

--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@
     line-height: 1.7;
   }
 
-  #mobile-icon {
+  .mobile-icon {
     display: block;
     margin: 0 auto;
     padding: 4rem 0 2rem 0;
