--- a/css/style.css
+++ b/css/style.css
@@ -220,9 +220,22 @@
     width: 100%;
   }
 
+  .about-me {
+    line-height: 1.5
+  }
+
   .about-me h1 {
     font-size: 2.4rem;
-    padding: 3rem 0 1rem 0;
+    font-weight: bold;
+    padding: 3rem 0 2rem 0;
+  }
+
+  .about-me h2 {
+    font-size: 2rem;
+    padding: 0rem 0 3rem 0;
+  }
+
+  .about-me h3 {
   }
 
   .about-me p {
