--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,32 @@
     border-bottom: .1rem solid #000;
   }
 
+  .carousel:before{
+    content: 'architecture';
+    animation: animate 8s linear infinite;
+  }
+
+  @@keyframes animate {
+    0%{
+      content: 'architecture';
+    }
+    20%{
+      content: 'illustration';
+    }
+    40%{
+      content: 'x';
+    }
+    60%{
+      content: 'y';
+    }
+    80%{
+      content: 'z';
+    }
+    100%{
+      content: 'a';
+    }
+  }
+
   .case-studies {
     margin-top: 10rem;
   }
@@ -226,8 +252,7 @@
 
   .about-me h1 {
     font-size: 2.4rem;
-    font-weight: bold;
-    padding: 3rem 0 2rem 0;
+    padding: 3rem 0 1rem 0;
   }
 
   .about-me h2 {
