added webkit to animation

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
     animation: animate 10s linear infinite;
   }
 
-  @keyframes animate {
+  @-webkit-keyframes animate {
     0%, 100%{
       content: 'architecture';
     }
