--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@
     color: #555;
   }
 
+
+
+
+
 /* Index styling*/
 
   h1 {
@@ -138,7 +142,7 @@
     }
   }
 
-  .case-studies {
+  #case-studies {
     margin-top: 10rem;
   }
 
@@ -213,6 +217,7 @@
     font-size: 2.2rem;
     font-weight: 400;
     padding-bottom: 1rem;
+    padding-top: 1rem;
   }
 
   h3 {
@@ -221,7 +226,6 @@
     font-weight: 400;
     padding-bottom: 1rem;
   }
-
 
   .contacts li {
     font-family: 'roc-grotesk', sans-serif;
@@ -242,7 +246,11 @@
     color: #555;
   }
 
-/*start of "about" styling*/
+
+
+
+
+/* "About" styling*/
 
   .about-image {
     display: block;
@@ -278,6 +286,10 @@
   .free-time {
     margin-bottom: 2.5rem;
   }
+
+
+
+
 
 /*start of "canopy" styling*/
 
@@ -529,7 +541,6 @@
   .less-space {
     padding-bottom: 1rem;
   }
-
 
   .slideshow-container{
     position: relative;
