--- a/css/style.css
+++ b/css/style.css
@@ -459,10 +459,14 @@
     padding-top: .75em;
   }
 
+  .solutions {
+    margin-bottom: 2rem;
+  }
+
   .final-mockups {
     display: block;
-    padding-top: 3em;
     width: 100%;
+    margin-bottom: 5rem;
   }
 
   .findings, .stories, .google-drive {
@@ -964,7 +968,7 @@
     }
 
     .colored {
-      margin: 10rem 0 5rem 0;
+      margin: 10rem 0 10rem 0;
     }
 
     .colored h2 {
@@ -1008,37 +1012,126 @@
     }
 
     .left {
+      width: 50%;
       float: left;
     }
 
     .right {
-      float: right;
+      width: 50%;
+      float: left;
     }
 
     .view-prototypes {
-      display: inline-block;
-      width: 75%;
+      margin: 0 auto;
+      text-align: center;
     }
 
     .view-prototypes h3 {
       font-size: 2em;
-      margin-bottom: 6rem;
+      margin-bottom: 12rem;
       text-align: center;
     }
 
     .mobile {
-      float: right;
+      float: left;
+      width: 50%;
     }
 
     .desktop {
       display: block;
       float: left;
+      width: 50%;
     }
 
     .mobile-icon, .desktop-icon {
-      display: block;
+      display: inline-block;
       margin: 0 auto;
-      padding: 12rem 0 2rem 0;
+      padding: 8rem 0 2rem 0;
     }
+
+    .section-label {
+      font-size: 2rem;
+      padding-bottom: 4rem;
+    }
+
+    .final-mockups {
+      margin-bottom: 12rem;
+      padding-top: 5rem;
+    }
+
+    .narrow {
+      padding-left: 16rem;
+      width: 70%;
+    }
+
+    .subsection h1 {
+      font-size: 2.8em;
+      padding: 0 0 1em 0;
+    }
+
+    .subsection p {
+      font-size: 2em;
+    }
+
+    .subsection ul {
+      padding: 2em;
+    }
+
+    .subsection li {
+      font-size: 2rem;
+    }
+
+    .findings {
+      padding: 8% 16%;
+    }
+
+    .key-findings .third {
+      margin-top: 2rem;
+      width: 33%;
+    }
+
+    .colored h3 {
+      font-size: 2.8rem;
+      padding: 0rem 0 5rem 0;
+    }
+
+    .colored h4 {
+      font-size: 2.8rem;
+      font-weight: bold;
+      padding-bottom: 1.5rem;
+    }
+
+    .colored p {
+      font-size: 1.6rem;
+      width: 85%;
+      padding-bottom: 1rem;
+    }
+
+    .bottom {
+      padding-top: 6rem;
+    }
+
+    .personas {
+      margin-bottom: 10rem;
+    }
+
+    .persona {
+      width: 50%;
+      float: left;
+    }
+
+    .persona h3 {
+      padding : 3rem 0 1.5rem 0;
+    }
+
+    .persona ul {
+      padding: 0 0 3rem 0;
+    }
+
+    .sophia {
+      padding-top: 0;
+    }
+
+
 
   }
