--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,10 @@
     padding-top: 0;
   }
 
+  #case-studies h2 {
+    padding-top: 2rem;
+  }
+
   h3 {
     font-family: 'roc-grotesk', sans-serif;
     font-size: 1.6rem;
