--- a/css/style.css
+++ b/css/style.css
@@ -1340,6 +1340,10 @@
 
   @media only screen and (min-width: 1199px) {
 
+    .hero h1 {
+      padding-top: 30rem;
+    }
+
     .about-image-mobile {
       display: none;
     }
