--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,37 @@
     margin: 1rem 0;
   }
 
+  #scroll {
+    position:fixed;
+    right:10px;
+    bottom:10px;
+    cursor:pointer;
+    width:50px;
+    height:50px;
+    background-color:#52796B;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:60px
+}
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#fff;
+}
+#scroll:hover {
+    background-color:#8DD3BA;
+    opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
+}
+
   .colored {
     background-color: #DFDFDF;
     font-family: 'roc-grotesk', sans-serif;
