--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -418,7 +418,7 @@
 }
 
   .colored {
-    background-color: #2D2D2D;
+    background-color: #333;
     font-family: 'roc-grotesk', sans-serif;
     margin: 5rem 0 5rem 0;
   }
