--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -867,7 +867,7 @@
 
   .form-header {
     font-size: 2.8rem;
-    padding: 12rem 0 5rem 0;
+    padding: 10rem 0 5rem 0;
     text-align: center;
   }
 
@@ -904,6 +904,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     width: 100%;
+    color: white;
   }
 
   form > button {
