--- a/css/style.css
+++ b/css/style.css
@@ -1038,9 +1038,6 @@
           width: 75%;
         }
 
-        header li {
-          margin-left: 10rem;
-        }
 
         .logos:hover .logo-visible {
           display: none
@@ -1428,6 +1425,46 @@
         top: -12rem;
       }
 
+
+      /* canopy styling*/
+
+
+      .form-header {
+        font-size: 3.6rem;
+        padding: 14rem 0 5rem 0;
+        text-align: center;
+      }
+
+      form {
+        margin: 0 auto;
+        width: 75%;
+      }
+
+      .form-label  {
+        font-size: 2rem;
+      }
+
+      form > input {
+        margin-bottom: 3rem;
+        padding: .5rem 0;
+      }
+
+      form > textarea {
+        margin-bottom: 3rem;
+        padding-bottom: 6rem;
+      }
+
+      form > button {
+        background-color: #111;
+        border: none;
+        color: white;
+        font-family: 'roc-grotesk', sans-serif;
+        font-size: 2rem;
+        font-weight: 500;
+        margin: 1rem 0 10rem 0;
+        padding-top: 1rem;
+      }
+
     }
 
 
@@ -1495,6 +1532,12 @@
 
       .smaller-margin {
         margin-top: 10rem;
+      }
+
+      .form-header {
+        font-size: 3.6rem;
+        padding: 10rem 0 5rem 0;
+        text-align: center;
       }
 
       }
@@ -1570,6 +1613,13 @@
 
         .B {
           padding-left: 12rem;
+        }
+
+      /* canopy styling*/
+
+        form {
+          margin: 0 auto;
+          width: 50%;
         }
 
     }
